osx_tips updated

--- a/_posts/2012-09-18-osx_tips.md
+++ b/_posts/2012-09-18-osx_tips.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: OSX Tips
-date: 2016-10-28
-categories: default osx update
+date: 2012-09-18
+categories: default osx
 ---
 
 ### Netatalk
@@ -110,28 +110,13 @@ ImageMagick Command Line Options are
 [here](http://www.imagemagick.org/script/command-line-options.php)
 
 
-### Identify image information via CLI
+## Identify image information via CLI
 
 	$: identify -format '%wx%h' 001_small.jpg
 	** 399x262 (result) **
 
-### Locate database in OSX
 
-Been a *NIX user you might sometimes use ***locate*** when you want to find files in a system.
-OSX has also this option but has to be enabled.
-
-
-	locate Curls
-
-	WARNING: The locate database (/var/db/locate.database) does not exist.
-
-To create the database used by *locate*, run the following command:
-
-	sudo launchctl load -w /System/Library/LaunchDaemons/com.apple.locate.plist
-
-This will take a while until database is created.
-
-### Adding network routes in OSX
+## Adding network routes in OSX
 
 **route** version in OSX is a bit old, and does not work same as LINUX.
 Adding a new route in your Mac is as follows:
@@ -145,7 +130,7 @@ Now we just want to route to a certain IP address.
 
 This IP is not accessible through the default network gateway, so we add this ***route*** over another gateway to access it.
 
-### GeekTool
+## GeekTool
 
 **TOP**
 
