updated osx_tips and lots_of_linux_tips

--- a/_posts/2012-09-18-osx_tips.md
+++ b/_posts/2012-09-18-osx_tips.md
@@ -2,14 +2,14 @@
 layout: post
 title: OSX Tips
 date: 2012-09-18
-categories: default osx
+categories: macos osx tips
 ---
 
-### Netatalk
+## Netatalk
 
 This is needed if you want to serve AFP from your linux machine.
 
-
+```
 	$ sudo aptitude update
 
 	$ mkdir -p ~/src/netatalk
@@ -29,10 +29,9 @@ This is needed if you want to serve AFP from your linux machine.
 	$ sudo debi
 
 	$ echo "netatalk hold" | sudo dpkg --set-selections
+```
 
-  
-
-After this, you'll have a file server capable of AFP for OSX systems.
+After that, you'll have a file server capable of AFP for OSX systems.
 
 ### .AppleDouble Files
 
@@ -41,10 +40,11 @@ installed the **_netatalk_** binaries, there's a script called
 **cleanappledouble.pl** which will clean up any orphaned entries in
 **.AppleDouble** directories.
 
+```
 	$ ./cleanappledouble.pl --help
 
 	Usage: ./cleanappledouble.pl [-r] [-v] directory [directory ...]
-
+```
 Scans each directory and:
 
 1. removes orphaned .AppleDouble files (from <directory>/.AppleDouble)
@@ -57,7 +57,9 @@ Scans each directory and:
 
 If you need to delete the folders, you can try something like
 
-	find . -name \.AppleDouble -exec rm -rf {} \;
+```
+find . -name \.AppleDouble -exec rm -rf {} \;
+```
 
 ## Create .iso images on OSX
 
@@ -65,7 +67,8 @@ From the Command Line:
 
 #### Show Status
 
-	$: drutil status
+```
+	localhost$: drutil status
  
 	Vendor   Product           Rev
 	MATSHITA DVD-R   UJ-857E   ZF1E
@@ -75,30 +78,31 @@ From the Command Line:
 	Space Free:   00:00:00         blocks:        0 /   0.00MB /   0.00MiB
 	Space Used:   46:37:04         blocks:   209779 / 429.63MB / 409.72MiB
 	Writability:
+```
 
 #### Unmount Disk
 
-	$: diskutil unmountDisk /dev/disk1
-	
+	localhost$: diskutil unmountDisk /dev/disk1	
 	Unmount of all volumes on disk1 was successful
 
 #### Create disk Image
 
-	$: dd if=/dev/disk1 of=image.iso  
+	localhost$: dd if=/dev/disk1 of=image.iso  
 	963672+1 records in
 	963672+1 records out
 	493400208 bytes transferred in 220.611582 secs (2236511 bytes/sec)
   
 #### Mount Disk Image
 
-	$ hdid image.iso
-
+	localhost$ hdid image.iso
 
 ## Change Background Login Image
 
-	cd /System/Library/CoreServices
-	sudo mv DefaultDesktop.jpg DefaultDesktop_org.jpg
-	sudo cp /Path/to/picture/you/want/to/use/image.jpg DefaultDesktop.jpg
+```
+cd /System/Library/CoreServices
+sudo mv DefaultDesktop.jpg DefaultDesktop_org.jpg
+sudo cp /Path/to/picture/you/want/to/use/image.jpg DefaultDesktop.jpg
+```
 
 ## ImageMagick 	
 
@@ -122,6 +126,7 @@ ImageMagick Command Line Options are
 Adding a new route in your Mac is as follows:
 
 	route -n add -net 12.0.0.0 192.168.1.200 255.0.0.0 
+
 This adds network access to 12.0.0.0 network through gateway 192.168.1.200 with 255.0.0.0 netmask.
 
 Now we just want to route to a certain IP address.
@@ -132,17 +137,17 @@ This IP is not accessible through the default network gateway, so we add this **
 
 ## GeekTool
 
-**TOP**
+### TOP
 
 	top -ocpu -F -R -l2 -n20 | tail -n21 | grep -v `0.0% ..:` | cut -c 1-24,25-29,103-112
 
-**STATUS**
+### STATUS
 
 	uptime | awk '{print "UPTIME : " $3 " " $4 " " $5 }' | sed -e 's/.$//g'; top -l 1 | awk '/PhysMem/ {print "RAM : " $8 " "}' ; top -l 2 | awk '/CPU usage/ && NR > 5 {print $6, $7=":", $8, $9="user ", $10, $11="sys ", $12, $13}'
 
-**NET CONNECTION**
+### NET CONNECTION
 
-File: ~/bin/ipaddress.sh
+##### File: ~/bin/ipaddress.sh
 
 	#! /bin/bash
 	myen0=`ifconfig en0 | grep "inet " | grep -v 127.0.0.1 | awk '{print $2}'`
@@ -163,49 +168,47 @@ File: ~/bin/ipaddress.sh
     echo "Airport  : INACTIVE"
     fi
 
-
-**EXTERNAL IP**
+### EXTERNAL IP
 
 	echo External IP: `curl -s http://checkip.dyndns.org/ | sed 's/[a-zA-Z<>/:]//g'`
 
-**CALENDAR**
+### CALENDAR
 
 	cal | sed "s/^/ /;s/$/ /;s/ $(date +%e) / $(date +%e | sed 's/./#/g') /"
 
-**SYSINFO**
+### SYSINFO
 
 	uptime | awk '{printf "Uptime: " $3 " " $4 " " $5 " " }'; top -l 1 | awk '/PhysMem/ {printf "RAM : " $8 ", " }' ; top -l 2 | awk '/CPU usage/ && NR > 5 {print $6, $7=":", $8, $9="user", $10, $11="sys", $12, $13}'
 
-**TimeMachine LOG view**
+### TimeMachine LOG view
  
 	grep backupd /var/log/system.log | sed s_/System/Library/CoreServices/__g | tail -n 3
 
-
 ## Networked TimeMachine Backup process
  
-1. Create TM backup disk image.
-
+* Create TM backup disk image.
 First get your MAC address from your card and create disk image with hdiutil.
 
-	ifconfig en0 |grep ether
-	hdiutil create -size 120g -fs HFS+J -volname "Jacintosh Backup" jacintosh_000008000469.sparsebundle
-	
+```
+$ ifconfig en0 |grep ether
 
-2. Enable Unsupported Network Volumes
+$ hdiutil create -size 120g -fs HFS+J -volname "Jacintosh Backup" jacintosh_000008000469.sparsebundle
+```	
+* Enable Unsupported Network Volumes
 
 		defaults write com.apple.systempreferences TMShowUnsupportedNetworkVolumes 1
   
-3. Mount the NAS share the sparsebundle  and copy sparsebundle image to it.
+* Mount the NAS share the sparsebundle  and copy sparsebundle image to it.
 
 		rsync -avE jacintosh_000008000469.sparsebundle /Volumes/TMBackups/.
   
-4. umount and mount again remote sparsebundle.
+* umount and mount again remote sparsebundle.
   
-5. Go to TimeMachine and select new remote image disk.
+* Go to TimeMachine and select new remote image disk.
   
-6. Create your first backup.
+* Create your first backup.
   
-7. If you think Time Machine backs up too often
+* If you think Time Machine backs up too often
 
 		sudo defaults write /System/Library/LaunchDaemons/com.apple.backupd-auto StartInterval -int 1800
 
@@ -251,7 +254,7 @@ type in this command (it is one line):
 
 ## Useful tips
 
-**RSYNC in OSX**  
+### RSYNC in OSX
   
 The rsync utility offers substantial improvements in performance when making backups of large file hierarchies.
 
@@ -259,7 +262,7 @@ To copy extended attributes with it, you must specify the -E flag. You can use r
 
 -E is just for the Mac OS X version of rsync 2.6.9, in the rsync 3 family, it is replaced by the -X flag.  
   
-**Rebuild Spotlight index**  
+#### Rebuild Spotlight index
 
 	sudo mdutil -s / (shows status)
 
@@ -278,19 +281,18 @@ Little Script for autoindexing.
 	mdutil -i on "/Volumes/stuff" >/dev/null
 	fi
 
-**Get Mac serial number through command line **  
+### Get Mac serial number through command line  
 
 	ioreg -l | awk '/IOPlatformSerialNumber/ { print $4; }'
   
-**Get Mac Hardware info through command line**
-
+### Get Mac Hardware info through command line
 
 	system_profiler | less
 
-**Dashboard Disable**  
+### Dashboard Disable
 
 	defaults write com.apple.dashboard mcx-disabled -boolean YES
 
-**DNS Flush cache**  
+### DNS Flush cache**  
 	
 	sudo dscacheutil -flushcache
